--- a/style.css
+++ b/style.css
@@ -12,13 +12,17 @@ html, body {
 }
 
 a {
-  background-color: rgb(22, 90, 135);
+  background-color: rgb(64, 112, 145);
   text-decoration: none;
-  color: rgb(97, 129, 204);
+  color: rgb(255, 255, 255);
 
   transition: color 0.2s ease-in-out;
 
   padding: 0.5rem;
   margin: 0.5rem;
   border-radius: 8px;
+
+  font-weight: bold;
+
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
 }
