--- a/game/game.css
+++ b/game/game.css
@@ -47,6 +47,20 @@ canvas {
   image-rendering: crisp-edges;
 }
 
+.game {
+  background-color: black;
+
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 #h {
   display: flex;
   align-items: center;
