--- a/game/game.css
+++ b/game/game.css
@@ -43,8 +43,8 @@ canvas {
   width: 100%;
   height: 100%;
 
-  image-rendering: pixelated;
-  image-rendering: crisp-edges;
+  /*image-rendering: pixelated;*/
+  /*image-rendering: crisp-edges;*/
 }
 
 .game {
