--- a/Tools/SpriteEditor/css/SpriteEditor.css
+++ b/Tools/SpriteEditor/css/SpriteEditor.css
@@ -5,13 +5,18 @@
    margin: 0;
    padding: 0;
 
+   overflow: hidden;
+
    font-family: sans-serif;
+ }
+
+ * {
+   box-sizing: border-box;
  }
 
  canvas {
    background-color: #000;
 
-   position: fixed;
    width: 100%;
    height: 100%;
 
@@ -19,8 +24,15 @@
    image-rendering: crisp-edges;
  }
 
- #menu {
-   user-select: none;
+ .contain {
+   display: grid;
+
+   grid-template-columns: 100%;
+   grid-template-rows: 3% 97%;
+
+   width: 100%;
+   overflow: hidden;
+
  }
 
  #menu-generator {
@@ -34,6 +46,8 @@
    justify-content: center;
    align-items: center;
 
+   flex-direction: column;
+
    background-color: rgb(255, 255, 255);
    padding: 10px;
    border-radius: 5px;
@@ -41,6 +55,10 @@
 
    min-width: 250px;
    min-height: 250px;
+ }
+
+ #menu-generator>#col-lig-form-gen.hide {
+   display: none;
  }
 
  #menu-generator>#col-lig-form-gen {
@@ -56,20 +74,16 @@
 
 
  #menu {
+
+   user-select: none;
+
    z-index: 9;
-   position: fixed;
-
-   top: 0;
-   left: 0;
-
    display: flex;
 
    background-color: rgb(255, 255, 255);
-   padding: 2px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 
-   width: 100vw;
-   min-height: 25px;
+   width: 100%;
  }
 
  #menu>ul {
