--- a/style.css
+++ b/style.css
@@ -26,3 +26,21 @@ a {
 
   box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
 }
+
+/*button {
+ */
+.game {
+  background-color: rgb(48, 203, 64);
+  color: rgb(255, 255, 255);
+  border: 2px solid rgb(255, 255, 255);
+  border-radius: 8px;
+
+  padding: 0.8rem;
+  margin: 0.8rem;
+
+  font-weight: bold;
+
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
+
+  cursor: pointer;
+}
